--- a/styles.css
+++ b/styles.css
@@ -76,47 +76,56 @@
 }
 
 /* Toggle icon size */
-#toggle-all .content .sectionbody h4 a.tc-small, .course-content ul.ctopics li.section .content .toggle a.tc-small {
+#toggle-all .content .sectionbody h4 a.tc-small, .course-content ul.ctopics li.section .content .toggle a.tc-small,
+#toggle-all .content .sectionbody h4 a.tc-small, .course-content ul.ctopics li.section .content .toggle-disabled a.tc-small {
     background-size: 16px 16px;
 }
 
-#toggle-all .content .sectionbody h4 a.tc-medium, .course-content ul.ctopics li.section .content .toggle a.tc-medium {
+#toggle-all .content .sectionbody h4 a.tc-medium, .course-content ul.ctopics li.section .content .toggle a.tc-medium,
+#toggle-all .content .sectionbody h4 a.tc-medium, .course-content ul.ctopics li.section .content .toggle-disabled a.tc-medium{
     background-size: 24px 24px;
 }
-#toggle-all .content .sectionbody h4 a.tc-large, .course-content ul.ctopics li.section .content .toggle a.tc-large {
+#toggle-all .content .sectionbody h4 a.tc-large, .course-content ul.ctopics li.section .content .toggle a.tc-large,
+#toggle-all .content .sectionbody h4 a.tc-large, .course-content ul.ctopics li.section .content .toggle-disabled a.tc-large{
     background-size: 32px 32px;
 }
 
 /* -- Set the clickable element of the Toggle -- */
-.course-content ul.ctopics li.section .content .toggle a {
+.course-content ul.ctopics li.section .content .toggle a,
+.course-content ul.ctopics li.section .content .toggle-disabled a {
     display: block;
     width: auto;
     padding-top: 6px;
     padding-bottom: 6px;
 }
 
-.course-content ul.ctopics li.section .content .toggle a.tc-small {
+.course-content ul.ctopics li.section .content .toggle a.tc-small,
+.course-content ul.ctopics li.section .content .toggle-disabled a.tc-small {
     padding-left: 16px; /* The 16px allows the arrow to be with the text next to it. */
     padding-right: 16px;
 }
 
-.course-content ul.ctopics li.section .content .toggle a.tc-medium {
+.course-content ul.ctopics li.section .content .toggle a.tc-medium,
+.course-content ul.ctopics li.section .content .toggle-disabled a.tc-medium {
     padding-left: 24px; /* The 24px allows the arrow to be with the text next to it. */
     padding-right: 24px;
 }
 
-.course-content ul.ctopics li.section .content .toggle a.tc-large {
+.course-content ul.ctopics li.section .content .toggle a.tc-large,
+.course-content ul.ctopics li.section .content .toggle-disabled a.tc-large{
     padding-left: 32px; /* The 32px allows the arrow to be with the text next to it. */
     padding-right: 32px;
 }
 
-body.ie7 .course-content ul.ctopics li.section .content .toggle a {
+body.ie7 .course-content ul.ctopics li.section .content .toggle a,
+body.ie7 .course-content ul.ctopics li.section .content .toggle-disabled a {
     padding-top: 7px;
     padding-bottom: 7px;
 }
 
 /* CONTRIB-4106 */
 .course-content ul.ctopics li.section .content .toggle a  h3,
+.course-content ul.ctopics li.section .content .toggle-disabled a  h3,
 .course-content ul.ctopics li.section .content.sectionhidden h3 {
     margin: 0px;
     word-break: break-word;
@@ -125,12 +134,14 @@ body.ie7 .course-content ul.ctopics li.section .content .toggle a {
 }
 
 .course-content ul.ctopics li.section .content .toggle a  h3.section-title,
+.course-content ul.ctopics li.section .content .toggle-disabled a  h3.section-title,
 .course-content ul.ctopics li.section .content.sectionhidden h3.section-title {
     margin: 4px;
 }
 
 /* Icon set common. */
-.course-content ul.ctopics li.section .content .toggle a, #toggle-all .content h4 a {
+.course-content ul.ctopics li.section .content .toggle a, #toggle-all .content h4 a,
+.course-content ul.ctopics li.section .content .toggle-disabled a {
     background-repeat: no-repeat;
     background-color: transparent;
     margin: 0px 4px;
@@ -678,14 +689,16 @@ body.format-topcoll.editing.jsenabled #region-main ul.ctopics .moodle-actionmenu
 }
 
 /* -- The section name in a Toggle and hidden section -- */
-.course-content ul.ctopics li.section .content .toggle, .course-content ul.ctopics li.section .content.sectionhidden  {
+.course-content ul.ctopics li.section .content .toggle, .course-content ul.ctopics li.section .content.sectionhidden,
+.course-content ul.ctopics li.section .content .toggle-disabled {
     display: block;
     text-align: left;
     padding: 0 0;
 }
 
 /* -- The width of a section name in a Toggle -- */
-.course-content ul.ctopics li.section .content .toggle {
+.course-content ul.ctopics li.section .content .toggle,
+.course-content ul.ctopics li.section .content .toggle-disabled{
     width: 100%;
 }
 
@@ -695,7 +708,8 @@ body.format-topcoll.editing.jsenabled #region-main ul.ctopics .moodle-actionmenu
 }
 
 /* -- The topic summary text -- */
-.course-content ul.ctopics li.section .content .toggle a p {
+.course-content ul.ctopics li.section .content .toggle a p,
+.course-content ul.ctopics li.section .content .toggle-disabled a p {
     font-size: 1.2em;
     font-style: italic;
     text-align: left;
@@ -712,7 +726,7 @@ body.format-topcoll.editing.jsenabled #region-main ul.ctopics .moodle-actionmenu
 }
 
 /* -- Toggle text -- */
-.course-content ul.ctopics li.section .content .toggle a, .course-content ul.ctopics li.section .content.sectionhidden {
+.course-content ul.ctopics li.section .content .toggle a, .course-content ul.ctopics li.section .content.sectionhidden, .course-content ul.ctopics li.section .content .toggle-disabled a {
     text-decoration: none;
     font-weight: bold;
 }
@@ -829,7 +843,8 @@ body.jsenabled #toggle-all {
     border-width: 1px;
     border-color: #dddddd;
 }
-body.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle a {
+body.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle a,
+body.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle-disabled a {
     padding-left: 35px;
     margin-left: 0;
     margin-right: 0;
@@ -839,7 +854,8 @@ body.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .to
     position: relative;
     padding-right: 40px;
 }
-body.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle a.alignment-right {
+body.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle a.alignment-right,
+body.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle-disabled a.alignment-right {
     background-position: top 10px right 10px;
 }
 body.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle-arrow a {
@@ -876,14 +892,17 @@ body.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .to
     padding-right: 10px;
 }
 .course-content ul.ctopics li.section .content .toggle a  h3.section-title, 
+.course-content ul.ctopics li.section .content .toggle-disabled a  h3.section-title,
 .course-content ul.ctopics li.section .content.sectionhidden h3.section-title {
     font-size: 20px;
 }
 .course-content ul.ctopics li.section .content .toggle a  h3.section-title.alignment-center, 
+.course-content ul.ctopics li.section .content .toggle-disabled a  h3.section-title.alignment-center,
 .course-content ul.ctopics li.section .content.sectionhidden h3.section-title.alignment-center {
     text-align: center;
 }
 .course-content ul.ctopics li.section .content .toggle a  h3.section-title.alignment-right, 
+.course-content ul.ctopics li.section .content .toggle-disabled a  h3.section-title.alignment-right, 
 .course-content ul.ctopics li.section .content.sectionhidden h3.section-title.alignment-right {
     text-align: right;
 }
@@ -896,13 +915,15 @@ body.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .to
     border-bottom: none;
     margin-bottom: 0;
 }
-.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle a .fa {
+.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle a .fa,
+.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle-disabled a .fa{
     position: absolute;
     top: 12px;
     font-size: 15px;
     right: 15px;
 }
-.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle a .fa.alignment-left {
+.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle a .fa.alignment-left,
+.format-topcoll.jsenabled .course-content ul.ctopics li.section .content .toggle-disabled a .fa.alignment-left {
     right: auto;
     left: 15px;
 }
